# algebra

./: Cargo.toml  README.md
src/: bit_based_encdec.rs  bit_based_gf8.rs  erasure_code.rs  field.rs  fin_field.rs  lib.rs  main.rs  matrix.rs  mebc.rs  reed_solomon.rs  univariate_polynomial.rs  vandermonde.rs  vecteur.rs
