[package]
name = "algebra"
version = "0.1.0"
authors = ["yuuya uezato <yuuya_uezato@dwango.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
fast_array_ops = { git = "https://github.com/yuezato/fast_array_ops" }

[dev-dependencies]
rand = "0.7"
